Make minor adjustments to the content classes

--- a/index.html
+++ b/index.html
@@ -26,27 +26,29 @@
             <div class="image">
                 This is a placeholder for an image
             </div> 
+            <button class = "darkcardbutton">Sign up</button>
         <div class="sub2">Some random information</div>
-        <div class="container">
-            <div class="info">
-                <img src="./images/barberry.png" alt="barberry">
-                <div class="text">This is a barberry</div>
+            <div class="container">
+                <div class="info">
+                    <img src="./images/barberry.png" alt="barberry">
+                    <div class="text">This is a barberry</div>
+                </div>
+                <div class="info">
+                    <img src="./images/chilli.png" alt="chilli">
+                    <div class="text">This is a chilli</div>
+                </div>
+                <div class="info">
+                    <img src="./images/pepper.png" alt="pepper">
+                    <div class="text">This is a pepper</div>
+                </div>
+                <div class="info">
+                    <img src="./images/saffron.png" alt="saffron">
+                    <div class="text">This is saffron</div>
+                </div>
             </div>
-            <div class="info">
-                <img src="./images/chilli.png" alt="chilli">
-                <div class="text">This is a chilli</div>
-            </div>
-            <div class="info">
-                <img src="./images/pepper.png" alt="pepper">
-                <div class="text">This is a pepper</div>
-            </div>
-            <div class="info">
-                <img src="./images/saffron.png" alt="saffron">
-                <div class="text">This is saffron</div>
-            </div>
-        </div>
         <div class="sub3">
-            <div class="quote">This is the quote</div>
+            <div class="quote">This is the quote This is the quote This is the quote This is the quoteThis is the quoteThis is the quoteThis is the quote</div>
+            <div class="quoteauthor">-Eli James</div>
         </div>
         <div class="sub4">
             <div class="blucontainer">
