make sub1 content look better

--- a/index.html
+++ b/index.html
@@ -16,33 +16,38 @@
         </ul>
     </div>
     <div class="content">
-        <div class="sub1"></div>
-            <div class="paragraph">
-                This website is awesome
+        <div class="sub1">
+            <div class="sub1Text">
+                <div class="paragraph">
+                    This website is awesome
+                </div>
+                <div class="smallpara">
+                    This website has some subtext...
+                </div>
+                <button class = "darkcardbutton">Sign up</button>
             </div>
-            <div class="smallpara">
-                This website ahs some subtext...
-            </div>
-            <div class="image">
-                This is a placeholder for an image
+            
+            <div class="sub1image">
+                <img class = "sub1image" src="./images/1_OLorod4d77ZQwOhWTs7Jdw.png">
             </div> 
-            <button class = "darkcardbutton">Sign up</button>
+            
+        </div>
         <div class="sub2">Some random information</div>
             <div class="container">
                 <div class="info">
-                    <img src="./images/barberry.png" alt="barberry">
+                    <img class="sub2img" src="./images/barberry.png" alt="barberry">
                     <div class="text">This is a barberry</div>
                 </div>
                 <div class="info">
-                    <img src="./images/chilli.png" alt="chilli">
+                    <img class="sub2img" src="./images/chilli.png" alt="chilli">
                     <div class="text">This is a chilli</div>
                 </div>
                 <div class="info">
-                    <img src="./images/pepper.png" alt="pepper">
+                    <img class="sub2img" src="./images/pepper.png" alt="pepper">
                     <div class="text">This is a pepper</div>
                 </div>
                 <div class="info">
-                    <img src="./images/saffron.png" alt="saffron">
+                    <img class="sub2img" src="./images/saffron.png" alt="saffron">
                     <div class="text">This is saffron</div>
                 </div>
             </div>
