First 2 divs are now alligned

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="sub1">
         <div class="sub1Text">
             <h1>This website is awesome</h1>
-            <p class="s1-subtext">Welcome, brave adventurer! I am Eli. This is subtext under the header div above.</p>
+            <p class="s1-subtext">Welcome, brave adventurer! I am Eli.sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss This is subtext under the header div above.</p>
             <button class="b2">Join us</button>
         </div>
         
